--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,5 +18,6 @@ build_image:
     before_script:
         - docker login -u $REGISTRY_USER -p $REGISTRY_PASS
     script:
-        - docker build -t $IMAGE_NAME:$IMAGE_TAG ./build/Dockerfile/
+        - cd build/
+        - docker build -t $IMAGE_NAME:$IMAGE_TAG .
         - docker push $IMAGE_NAME:$IMAGE_TAG
