--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -35,6 +35,5 @@ deploy:
     script:
         - ssh -o StrictHostKeyChecking=no -i $SSH_KEY root@167.99.132.210 "
             docker login -u $REGISTRY_USER -p $REGISTRY_PASS &&
-            docker stop $(docker ps -a -q) &&
-            docker rm $(docker ps -a -q) &&
+            docker ps -aq | xargs -r docker stop | xargs -r docker rm &&
             docker run -d -p 5000:5000 $IMAGE_NAME:$IMAGE_TAG"
