--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -33,8 +33,8 @@ deploy:
     before_script:
         - chmod 400 $SSH_KEY
     script:
-        - echo "SSH key path: $SSH_KEY"
-        - echo "Remote server IP: 134.209.241.242"
+        - echo "SSH key path $SSH_KEY"
+        - echo "Remote server IP 134.209.241.242"
         - echo "Logging in to Docker registry..."
         - docker login -u $REGISTRY_USER -p $REGISTRY_PASS
         - echo "Logged in to Docker registry"
