--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -33,16 +33,9 @@ deploy:
     before_script:
         - chmod 400 $SSH_KEY
     script:
-        - echo "SSH key path $SSH_KEY"
-        - echo "Remote server IP 134.209.241.242"
-        - echo "Logging in to Docker registry..."
-        - docker login -u $REGISTRY_USER -p $REGISTRY_PASS
-        - echo "Logged in to Docker registry"
+        - echo "Logging in to the remote server..."
+        - ssh -o StrictHostKeyChecking=no -i $SSH_KEY root@134.209.241.242 "docker login -u $REGISTRY_USER -p $REGISTRY_PASS"
         - echo "Stopping and removing existing containers..."
-        - ssh -o StrictHostKeyChecking=no -i $SSH_KEY root@134.209.241.242 "
-            docker ps -aq | xargs -r docker stop | xargs -r docker rm"
-        - echo "Stopped and removed existing containers"
-        - echo "Deploying new container..."
-        - ssh -o StrictHostKeyChecking=no -i $SSH_KEY root@134.209.241.242 "
-            docker run -d -p 5000:5000 $IMAGE_NAME:$IMAGE_TAG"
-        - echo "New container deployed"
+        - ssh -o StrictHostKeyChecking=no -i $SSH_KEY root@134.209.241.242 "docker ps -aq | xargs -r docker stop | xargs -r docker rm"
+        - echo "Pulling and running the new Docker image..."
+        - ssh -o StrictHostKeyChecking=no -i $SSH_KEY root@134.209.241.242 "docker run -d -p 5000:5000 $IMAGE_NAME:$IMAGE_TAG"
