--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -41,8 +41,8 @@ deploy:
 
     script:
         - echo "Logging in to the remote server..."
-        - ssh -v -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa root@134.209.241.242 "docker login -u $REGISTRY_USER -p $REGISTRY_PASS"
+        - ssh -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa root@134.209.241.242 "docker login -u $REGISTRY_USER -p $REGISTRY_PASS"
         - echo "Stopping and removing existing containers..."
-        - ssh -v -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa root@134.209.241.242 "docker ps -aq | xargs -r docker stop | xargs -r docker rm"
+        - ssh -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa root@134.209.241.242 "docker ps -aq | xargs -r docker stop | xargs -r docker rm"
         - echo "Pulling and running the new Docker image..."
-        - ssh -v -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa root@134.209.241.242 "docker run -d -p 5000:5000 $IMAGE_NAME:$IMAGE_TAG"
+        - ssh -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa root@134.209.241.242 "docker run -d -p 5000:5000 $IMAGE_NAME:$IMAGE_TAG"
